fix compilation in test